--- a/my-portfolio/hello-world/package.json
+++ b/my-portfolio/hello-world/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^1.7.0",
     "gatsby": "^2.18.12",
     "gatsby-plugin-cname": "^1.0.0",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
