--- a/my-portfolio/hello-world/package.json
+++ b/my-portfolio/hello-world/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-image-lightbox": "^5.1.1",
     "react-pdf": "^4.1.0",
     "react-pdf-js": "^5.1.0",
     "react-reveal": "^1.2.2",
