--- a/my-portfolio/hello-world/package.json
+++ b/my-portfolio/hello-world/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-cname": "^1.0.0",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.1.22",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
